# blog

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  config.toml  dontforgetthis.txt  gulpfile.js  hugo_stats.json  package-lock.json  package.json  postcss.config.js  pyproject.toml
.github/: dependabot.yml
.github/workflows/: gh-pages.yml  reviewdog.yml
archetypes/: default.md  livahugo.md
assets/css/: homepage.css
assets/js/: profile_picture.js
config/: liva-hugo.toml
content/: 404.md  _index.md  offline.md
content/about/: _index.md
content/articles/: 117-vscode-extensions-the-ultimate-guide-part-1.md  117-vscode-extensions-the-ultimate-guide-part-2.md  117-vscode-extensions-the-ultimate-guide-part-3.md  117-vscode-extensions-the-ultimate-guide-part-4.md  117-vscode-extensions-the-ultimate-guide-part-5.md  _index.md  best-way-to-install-python-in-your-computer.md  semver.md
content/blog/: 117-vscode-extensions-the-ultimate-guide-part-1.md  117-vscode-extensions-the-ultimate-guide-part-2.md  117-vscode-extensions-the-ultimate-guide.md  _index.md  best-way-to-install-python-in-your-computer.md  best-way-to-install-python.md  python2-vs-python3.md  semver.md
content/contact/: _index.md
content/english/articles/: 117-vscode-extensions-the-ultimate-guide-part-1.en.md  117-vscode-extensions-the-ultimate-guide-part-2.en.md  _index.md  boost-your-css.md  (+4 more)
content/resume/: print.css  resume.css  resume.html
content/search/: _index.md
data/: gallery.yml
static/: browserconfig.xml  manifest.webmanifest  site.webmanifest  sw.js
(+49 files in other folders)
