[tool.poetry]
name = "corfucinas-blog"
version = "0.1.0"
description = ""
authors = ["Corfucinas <53630064+Corfucinas@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
stylecloud = "^0.5.2"
wikipedia = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^23.1"
mypy = "^1.0"
wemake-python-styleguide = "^0.17.0"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
